--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -123,7 +123,7 @@
       <!--<header>Master Legend</header>-->
     </div>
     <div id="ticker">
-      <p>Recent report activity</p>
+      <p>Activity Stream</p>
       <ul class="recent-points unstyled-list"></ul>
     </div>
   </div>
