Extend map to bottom of page for raingarden demo

--- a/src/flavors/raingardens/static/css/custom.css
+++ b/src/flavors/raingardens/static/css/custom.css
@@ -123,13 +123,26 @@
 }
 
 
-
-
 /* =Map
 ------------------------------------------------------------- */
 
+#map-container {
+  bottom: 0;
+}
 
+/* =Content
+------------------------------------------------------------- */
 
+#content {
+  bottom: 0;
+}
+
+/* =Footer
+------------------------------------------------------------- */
+
+#colophon {
+  visibility: hidden;
+}
 
 
 /* =Media Queries
