--- a/src/flavors/raingardens/templates/index.html
+++ b/src/flavors/raingardens/templates/index.html
@@ -49,9 +49,9 @@
 <!--
   This will place content in the colophon below the map
  -->
-{% block colophon %}
-<p id="powered-by">{% blocktrans %}Powered by{% endblocktrans %} <a href="//shareabouts.org/" class="shareabouts-logo" target="_blank">Shareabouts</a>, <span class="nobreak">a project of <a href="//openplans.org/" class="openplans-logo" target="_blank">OpenPlans</a></span></p>
-{% endblock %}
+{#{% block colophon %}#}
+{#<p id="powered-by">{% blocktrans %}Powered by{% endblocktrans %} <a href="//shareabouts.org/" class="shareabouts-logo" target="_blank">Shareabouts</a>, <span class="nobreak">a project of <a href="//openplans.org/" class="openplans-logo" target="_blank">OpenPlans</a></span></p>#}
+{#{% endblock %}#}
 
 <!--
   Analytics, custom JS, and such go here
