Add basic geocoding for a place's address field
fix bug with form field submissions

--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -237,6 +237,7 @@
   <script src="{{STATIC_URL}}js/views/place-form-view.js"></script>
   <script src="{{STATIC_URL}}js/views/place-list-view.js"></script>
   <script src="{{STATIC_URL}}js/views/geocode-address-view.js"></script>
+  <script src="{{STATIC_URL}}js/views/geocode-address-place-view.js"></script>
   <script src="{{STATIC_URL}}js/views/legend-view.js"></script>
   <script src="{{STATIC_URL}}js/routes.js"></script>
   {% else %}
