--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1311,15 +1311,67 @@ ul.recent-points {
 .geocoding-enabled #geocode-address-bar {
   display: block;
 }
+#geocode-address-bar .error {
+  background-color: #BF6083;
+  color: #fff;
+  line-height: 1.75;
+  margin: 0;
+  padding: 0.25em 0.5em;
+  box-shadow: 2px 2px 0 #BF6083, 2px -2px 0 #BF6083, -2px 2px 0 #BF6083, -2px -2px 0 #BF6083;
+  position: absolute;
+  top: 3em;
+  right: 0.5em;
+  bottom: auto;
+  left: 0.5em;
+}
+#geocode-address-bar .error + form {
+  box-shadow: 2px 2px 0 #BF6083, 2px -2px 0 #BF6083, -2px 2px 0 #BF6083, -2px -2px 0 #BF6083;
+  margin-bottom: 2.5em;
+}
+#geocode-address-bar .error.is-hidden + form {
+  box-shadow: none;
+  margin-bottom: 0;
+}
+
+/* geocoding-address-place-bar - for place form fields */
+
+#geocode-address-place-bar {
+  display: none;
+  position: relative;
+}
+.geocoding-enabled #geocode-address-place-bar {
+  display: block;
+}
+#geocode-address-place-bar .error {
+  background-color: #BF6083;
+  color: #fff;
+  line-height: 1.75;
+  margin: 0;
+  padding: 0.25em 0.5em;
+  box-shadow: 2px 2px 0 #BF6083, 2px -2px 0 #BF6083, -2px 2px 0 #BF6083, -2px -2px 0 #BF6083;
+  position: absolute;
+  top: 3em;
+  right: 0.5em;
+  bottom: auto;
+  left: 0.5em;
+}
+#geocode-address-place-bar .error + form {
+  box-shadow: 2px 2px 0 #BF6083, 2px -2px 0 #BF6083, -2px 2px 0 #BF6083, -2px -2px 0 #BF6083;
+  margin-bottom: 2.5em;
+}
+#geocode-address-place-bar .error.is-hidden + form {
+  box-shadow: none;
+  margin-bottom: 0;
+}
+
+/* All other geocoding stylews */
+
 .geocode-address-form {
   position: relative;
 }
 input.geocode-address-field {
   width: 100%;
-  border-width: 0;
   line-height: 1.25;
-  background-color: #6f6f6f;
-  color: #eee;
   padding-left: 2.125em;
 }
 input.geocode-address-field:focus {
@@ -1359,124 +1411,13 @@ input.geocode-address-field:focus {
   margin: 0.125em 0 0 0.375em;
   background-color: #a3c7d9;
   -webkit-transform: rotate(-45deg);
-     -moz-transform: rotate(-45deg);
-      -ms-transform: rotate(-45deg);
-       -o-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-}
-#geocode-address-bar .error {
-  background-color: #BF6083;
-  color: #fff;
-  line-height: 1.75;
-  margin: 0;
-  padding: 0.25em 0.5em;
-  box-shadow: 2px 2px 0 #BF6083, 2px -2px 0 #BF6083, -2px 2px 0 #BF6083, -2px -2px 0 #BF6083;
-  position: absolute;
-  top: 3em;
-  right: 0.5em;
-  bottom: auto;
-  left: 0.5em;
-}
-#geocode-address-bar .error + form {
-  box-shadow: 2px 2px 0 #BF6083, 2px -2px 0 #BF6083, -2px 2px 0 #BF6083, -2px -2px 0 #BF6083;
-  margin-bottom: 2.5em;
-}
-#geocode-address-bar .error.is-hidden + form {
-  box-shadow: none;
-  margin-bottom: 0;
-}
-
-.geocode-spinner {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 2em;
-  background-color: #6f6f6f;
-}
-
-/* geocoding-address-place-bar - for place form fields */
-
-#geocode-address-place-bar {
-  display: none;
-  position: relative;
-}
-.geocoding-enabled #geocode-address-place-bar {
-  display: block;
-}
-.geocode-address-place-form {
-  position: relative;
-}
-input.geocode-address-place-field {
-  width: 100%;
-  line-height: 1.25;
-  padding-left: 2.125em;
-}
-input.geocode-address-place-field:focus {
-  outline: 0;
-}
-.geocode-address-place-label {
-  position: absolute;
-  top: 1.5em;
-  left: 1em;
-  height: 1.25em;
-  width: 1.25em;
-  margin-top: -0.625em;
-  overflow: visible;
-  text-indent: -9999px;
-  cursor: pointer;
-}
-.geocode-address-place-label:before,
-.geocode-address-place-label:after {
-  content: "";
-  display: block;
-  position: absolute;
-}
-.geocode-address-place-label:before {
-  top: 0;
-  left: 0;
-  height: 1em;
-  width: 1em;
-  border: 0.2em solid #a3c7d9;
-  border-radius: 2em;
-  margin: -0.25em 0 0 -0.25em;
-}
-.geocode-address-place-label:after {
-  top: 50%;
-  left: 50%;
-  height: 0.75em;
-  width: 0.25em;
-  margin: 0.125em 0 0 0.375em;
-  background-color: #a3c7d9;
-  -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -ms-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
-#geocode-address-place-bar .error {
-  background-color: #BF6083;
-  color: #fff;
-  line-height: 1.75;
-  margin: 0;
-  padding: 0.25em 0.5em;
-  box-shadow: 2px 2px 0 #BF6083, 2px -2px 0 #BF6083, -2px 2px 0 #BF6083, -2px -2px 0 #BF6083;
-  position: absolute;
-  top: 3em;
-  right: 0.5em;
-  bottom: auto;
-  left: 0.5em;
-}
-#geocode-address-place-bar .error + form {
-  box-shadow: 2px 2px 0 #BF6083, 2px -2px 0 #BF6083, -2px 2px 0 #BF6083, -2px -2px 0 #BF6083;
-  margin-bottom: 2.5em;
-}
-#geocode-address-place-bar .error.is-hidden + form {
-  box-shadow: none;
-  margin-bottom: 0;
-}
 
-.geocode-place-spinner {
+.geocode-spinner {
   position: absolute;
   top: 0;
   left: 0;
