added happytrail video, new page, better header

--- a/src/flavors/happytrailtest/static/css/custom.css
+++ b/src/flavors/happytrailtest/static/css/custom.css
@@ -21,7 +21,7 @@
   /*color: #F25218;*/ /*too much like 'simpsons'*/
   color: #eee;
   font-size: .75em;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', serif;
   text-shadow: 1px -1px 1px rgba(0,0,0,0.5);
   float: left;
   margin: 0 0.5em 0 0;
