--- a/src/flavors/happytrailtest/static/css/custom.css
+++ b/src/flavors/happytrailtest/static/css/custom.css
@@ -28,14 +28,24 @@
   padding: 0;
 }
 
+.has-pages #site-title {
+  padding-left: 3.25em;
+}
+
+#site-title a:link,
 #site-title a:visited {
   display: block;
   font-size: 2em;
   line-height: 1.25;
   text-decoration: none;
   /*color: #F25218;*/
-  color: #ffffff;
+  color: #228b22;
 }
+#site-title a:hover {
+  /*color: #FF8B61;*/
+  color: #abde76;
+}
+
 
 /* =Media Queries
 -------------------------------------------------------------- */
