--- a/src/flavors/happytrail/static/css/custom.css
+++ b/src/flavors/happytrail/static/css/custom.css
@@ -46,6 +46,26 @@
   color: #abde76;
 }
 
+/* =Map
+------------------------------------------------------------- */
+
+#map-container {
+  bottom: 0;
+}
+
+/* =Content
+------------------------------------------------------------- */
+
+#content {
+  bottom: 0;
+}
+
+/* =Footer
+------------------------------------------------------------- */
+
+#colophon {
+  visibility: hidden;
+}
 
 /* =Media Queries
 -------------------------------------------------------------- */
