Fix font imports for happytrail

--- a/src/flavors/happytrail/templates/index.html
+++ b/src/flavors/happytrail/templates/index.html
@@ -3,6 +3,7 @@
 
 {% block site-title %}
 <a href="/">{{ config.app.name }}</a>
+<link href='//fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
 {% endblock %}
 
 {% block meta %}
