--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1295,6 +1295,51 @@ ul.recent-points {
   float: left;
 }
 
+/* =Place Counter
+-------------------------------------------------------------- */
+#place-counter .counter-meter {
+  width: auto;
+  margin:0 auto;
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
+  padding: 0.5em 0.75em;
+  text-align: center;
+  vertical-align: middle;
+  color: #1a8504;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-color: #a3c7d9;
+  box-shadow: -0.25em 0.25em 0 rgba(0,0,0,0.1);
+  font-weight: 600;
+  border: 3px solid rgba(0,0,0,0.05);
+  border-radius: 3px;
+}
+
+.col{
+  margin:0 10px;
+  float:left;
+  display:inline;
+  overflow:hidden;
+}
+.meter-label{
+  width: auto;
+}
+
+.meter-bar meter {
+  width: 260px;
+  height: 10px;
+
+  -webkit-appearance: none;  /* Reset appearance */
+  border: 1px solid #ccc;
+  border-radius: 3px;
+
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
+  padding: 0.1em 0.1em;
+}
+
 /* =Geocoding
 -------------------------------------------------------------- */
 
@@ -1364,7 +1409,7 @@ ul.recent-points {
   margin-bottom: 0;
 }
 
-/* All other geocoding stylews */
+/* All other geocoding styles */
 
 .geocode-address-form {
   position: relative;
