Fix map filters using sidebar
 - Filters are now reading from sidebar and not from the pages
 - Still more refactoring needs to be done for better sidebar integration

--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -274,6 +274,7 @@
       support:    {{ config.support|as_json }},
       map:        {{ config.map|as_json }},
       activity:   {{ config.activity|as_json }},
+      sidebar:    {{ config.sidebar|as_json}},
       pages:      {{ pages_config_json|safe }}
     };
 
