Update sidebar settings

--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -290,6 +290,7 @@
         placeConfig: S.Config.place,
         placeTypes: S.Config.placeTypes,
         cluster: S.Config.cluster,
+        sidebarConfig: S.Config.sidebar,
         surveyConfig: S.Config.survey,
         supportConfig: S.Config.support,
         mapConfig: S.Config.map,
