Improve rain garden naming support
 - If no garden name or garden number, the name is left blank
 - Add comma for thousands numbers

--- a/src/flavors/raingardens/templates/index.html
+++ b/src/flavors/raingardens/templates/index.html
@@ -59,7 +59,8 @@
  -->
 
 {% block includes %}
-<!--<script src="{{STATIC_URL}}js/views/commitment-view.js"></script>-->
+  <script src="{{STATIC_URL}}js/raingardens-handlebars-helpers.js"></script>
+  <script src="{{STATIC_URL}}js/views/raingardens-detail-view.js"></script>
 <script>
   (function(S) {
 // ========================================
