change about page

--- a/src/flavors/marra/static/css/custom.css
+++ b/src/flavors/marra/static/css/custom.css
@@ -7,7 +7,15 @@
 
 /* =Header
 -------------------------------------------------------------- */
-
+#site-title {
+  /*color: #F25218;*/ /*too much like 'simpsons'*/
+  font-size: .75em;
+  font-family: 'Dancing Script', cursive;
+  text-shadow: 1px -1px 1px rgba(0,0,0,0.5);
+  float: left;
+  margin: 0 0.5em 0 0;
+  padding: 0;
+}
 
 /* =Media Queries
 -------------------------------------------------------------- */
